# smarthome2

./: .env.example  .gitignore  License.txt  pyproject.toml
config/: config.example.yaml
home_assistant/: __init__.py  __main__.py
home_assistant/ai/: home_management.py  home_management_fixed.py  reasoning.py  smart_scenarios.py  smart_scenarios_clean.py
home_assistant/api/: main.py
home_assistant/communications/: hub.py
home_assistant/communications/protocols/: __init__.py  gosung.py  govee.py  matter.py  tuya.py  zigbee.py  zwave.py
home_assistant/core/: __init__.py  config.py  events.py  events_simple.py  lifecycle.py  lifecycle_main.py
home_assistant/devices/: base.py  manager.py
home_assistant/storage/: database.py
home_assistant/ui/: __init__.py
home_assistant/ui/static/: app.js  enhanced-app.js  full-premium-app.js  full-premium-index.html  index.html  manifest.json  premium-app.js  premium-index.html  sw.js
home_assistant/ui/templates/: enhanced-index.html
home_assistant/voice/: __init__.py  audio.py  audio_fixed.py  manager.py  stt.py  tts.py  wake_word.py
scripts/: run.sh  setup.sh  test.sh
tests/: __init__.py  test_config.py  test_voice.py
